--- a/package.json
+++ b/package.json
@@ -2,7 +2,11 @@
   "name": "Kontainer",
   "version": "1.0.0",
   "description": "A media file format generator/parser that exposes a React-like API.",
+  "repository": "https://github.com/kuu/Kontainer",
   "main": "index.js",
+  "bin": {
+    "kontainer": "bin/kontainer.js"
+  },
   "directories": {
     "test": "test"
   },
@@ -14,14 +18,18 @@
     "transpile": "npm run transpile-src && npm run transpile-test",
     "transpile-src": "npm run clean-src && babel src/ --out-dir transpiled/src/",
     "transpile-test": "npm run clean-test && babel test/ --out-dir transpiled/test/",
-    "test": "npm run lint && npm run transpile && jasmine-node transpiled/test/spec/"
+    "test": "npm run lint && npm run transpile && jasmine-node transpiled/test/spec/",
+    "install": "npm test"
   },
-  "author": "",
+  "author": "Kuu Miyazaki",
   "license": "MIT",
   "devDependencies": {
     "babel": "^5.2.2",
     "babel-eslint": "^3.0.1",
     "eslint": "^0.20.0",
     "jasmine-node": "^1.14.5"
+  },
+  "dependencies": {
+    "yargs": "^3.8.0"
   }
 }
