--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "transpile": "npm run transpile-src && npm run transpile-test",
     "transpile-src": "npm run clean-src && babel src/ --out-dir transpiled/src/",
     "transpile-test": "npm run clean-test && babel test/ --out-dir transpiled/test/",
-    "test": "npm run lint && npm run transpile && jasmine-node transpiled/test/spec/",
+    "test": "npm run lint && npm run test-node && npm run test-browser",
+    "test-node": "npm run transpile && jasmine-node transpiled/test/spec/",
+    "test-browser": "karma start karma.conf.js",
     "install": "npm test"
   },
   "author": "Kuu Miyazaki",
@@ -26,8 +28,15 @@
   "devDependencies": {
     "babel": "^5.2.2",
     "babel-eslint": "^3.0.1",
+    "babelify": "^6.0.2",
     "eslint": "^0.20.0",
-    "jasmine-node": "^1.14.5"
+    "jasmine-core": "^2.3.2",
+    "jasmine-node": "^1.14.5",
+    "karma": "^0.12.31",
+    "karma-browserify": "^4.1.2",
+    "karma-chrome-launcher": "^0.1.10",
+    "karma-cli": "0.0.4",
+    "karma-jasmine": "^0.3.5"
   },
   "dependencies": {
     "yargs": "^3.8.0"
