--- a/package.json
+++ b/package.json
@@ -15,9 +15,15 @@
   },
   "scripts": {
     "lint": "eslint src/ test/",
-    "clean": "npm run clean-src && npm run clean-test",
+    "clean": "npm run clean-src && npm run clean-test && npm run clean-bundle",
     "clean-src": "rm -fR transpiled/src ; mkdir -p transpiled/src",
     "clean-test": "rm -fR transpiled/test ; mkdir -p transpiled/test",
+    "clean-browser": "rm -fR concatenated ; mkdir concatenated ; rm -fR minified ; mkdir minified",
+    "bundle": "browserify -t babelify src/index.js > concatenated/kontainer.js --debug",
+    "release-bundle": "NODE_ENV=production browserify -t babelify src/index.js > concatenated/kontainer.js",
+    "minify": "uglifyjs concatenated/kontainer.js --source-map-url kontainer.js.map -p 1 --source-map minified/kontainer.js.map -c -m -o minified/kontainer.js",
+    "build": "npm run clean-browser && npm run bundle",
+    "release-build": "npm run clean-browser && npm run release-bundle && npm run minify",
     "transpile": "npm run transpile-src && npm run transpile-test",
     "transpile-src": "npm run clean-src && babel src/ --out-dir transpiled/src/",
     "transpile-test": "npm run clean-test && babel test/ --out-dir transpiled/test/",
@@ -32,6 +38,7 @@
     "babel": "^5.2.2",
     "babel-eslint": "^3.0.1",
     "babelify": "^6.0.2",
+    "browserify": "^10.1.3",
     "eslint": "^0.20.0",
     "jasmine-core": "^2.3.2",
     "jasmine-node": "^1.14.5",
@@ -39,7 +46,8 @@
     "karma-browserify": "^4.1.2",
     "karma-chrome-launcher": "^0.1.10",
     "karma-cli": "0.0.4",
-    "karma-jasmine": "^0.3.5"
+    "karma-jasmine": "^0.3.5",
+    "uglify-js": "^2.4.21"
   },
   "dependencies": {
     "yargs": "^3.8.0"
