Change the name to kontainer-js as kontainer was already taken by other npm package.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Kontainer",
+  "name": "kontainer-js",
   "version": "1.0.0",
   "description": "A media file format generator/parser that exposes a React-like API.",
   "repository": {
