--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "kontainer-js",
-  "version": "1.0.7",
+  "version": "1.1.0",
   "description": "A media file format generator/parser that exposes a React-like API.",
   "repository": {
     "type": "git",
@@ -44,6 +44,7 @@
     "ISO/IEC 14496-12"
   ],
   "devDependencies": {
+    "babel": "^5.2.17",
     "babel-eslint": "^3.0.1",
     "babelify": "^6.0.2",
     "browserify": "^10.1.3",
@@ -58,7 +59,7 @@
     "uglify-js": "^2.4.21"
   },
   "dependencies": {
-    "babel": "^5.2.17",
+    "babel-core": "^5.4.2",
     "yargs": "^3.8.0"
   }
 }
