--- a/package.json
+++ b/package.json
@@ -44,22 +44,24 @@
     "ISO/IEC 14496-12"
   ],
   "devDependencies": {
-    "babel": "^5.2.17",
-    "babel-eslint": "^3.0.1",
-    "babelify": "^6.0.2",
-    "browserify": "^10.1.3",
-    "eslint": "^0.20.0",
-    "jasmine-core": "^2.3.2",
+    "babel-cli": "^6.5.1",
+    "babel-eslint": "^5.0.0",
+    "babel-preset-es2015": "^6.5.0",
+    "babelify": "^7.2.0",
+    "browserify": "^13.0.0",
+    "eslint": "^2.2.0",
+    "jasmine-core": "^2.4.1",
     "jasmine-node": "^1.14.5",
-    "karma": "^0.12.31",
-    "karma-browserify": "^4.1.2",
-    "karma-chrome-launcher": "^0.1.10",
-    "karma-cli": "0.0.4",
-    "karma-jasmine": "^0.3.5",
-    "uglify-js": "^2.4.21"
+    "karma": "^0.13.21",
+    "karma-browserify": "^5.0.2",
+    "karma-chrome-launcher": "^0.2.2",
+    "karma-cli": "^0.1.2",
+    "karma-jasmine": "^0.3.7",
+    "uglify-js": "^2.6.2",
+    "watchify": "^3.7.0"
   },
   "dependencies": {
-    "babel-core": "^5.4.2",
-    "yargs": "^3.8.0"
+    "babel-core": "^6.5.2",
+    "yargs": "^4.2.0"
   }
 }
