--- a/package.json
+++ b/package.json
@@ -6,30 +6,26 @@
     "type": "git",
     "url": "https://github.com/kuu/Kontainer.git"
   },
-  "main": "transpiled/src/index.js",
+  "main": "src/index.js",
   "bin": {
-    "kontainer": "bin/kontainer.js"
+    "kontainer": "src/cli.js"
   },
   "directories": {
-    "test": "test"
+    "src": "./src",
+    "test": "./test"
   },
   "scripts": {
     "lint": "eslint src/ test/",
-    "clean": "npm run clean-src && npm run clean-test && npm run clean-browser",
-    "clean-src": "rm -fR transpiled/src ; mkdir -p transpiled/src",
-    "clean-test": "rm -fR transpiled/test ; mkdir -p transpiled/test",
-    "clean-browser": "rm -fR concatenated ; mkdir concatenated ; rm -fR minified ; mkdir minified",
+    "test": "npm run lint && npm run test-node && npm run test-browser",
+    "test-node": "jasmine JASMINE_CONFIG_PATH=jasmine.json",
+    "test-browser": "karma start karma.conf.js",
+    "clean": "rm -fR concatenated ; mkdir concatenated ; rm -fR minified ; mkdir minified",
+    "build": "npm run clean && npm run bundle",
     "bundle": "browserify -t babelify src/index.js > concatenated/kontainer.js --debug",
+    "release-build": "npm run clean && npm run release-bundle && npm run minify",
     "release-bundle": "NODE_ENV=production browserify -t babelify src/index.js > concatenated/kontainer.js",
     "minify": "uglifyjs concatenated/kontainer.js --source-map-url kontainer.js.map -p 1 --source-map minified/kontainer.js.map -c -m -o minified/kontainer.js",
-    "build": "npm run clean-browser && npm run bundle",
-    "release-build": "npm run clean-browser && npm run release-bundle && npm run minify",
-    "transpile": "npm run transpile-src && npm run transpile-test",
-    "transpile-src": "npm run clean-src && babel src/ --out-dir transpiled/src/",
-    "transpile-test": "npm run clean-test && babel test/ --out-dir transpiled/test/",
-    "test": "npm run lint && npm run test-node && npm run test-browser",
-    "test-node": "npm run transpile && jasmine-node transpiled/test/spec/",
-    "test-browser": "karma start karma.conf.js"
+    "prepublish": "dist-es6"
   },
   "author": "Kuu Miyazaki",
   "license": "MIT",
@@ -44,24 +40,23 @@
     "ISO/IEC 14496-12"
   ],
   "devDependencies": {
-    "babel-cli": "^6.5.1",
-    "babel-eslint": "^5.0.0",
-    "babel-preset-es2015": "^6.5.0",
+    "babel-eslint": "^6.0.2",
+    "babel-preset-es2015": "^6.6.0",
     "babelify": "^7.2.0",
     "browserify": "^13.0.0",
-    "eslint": "^2.2.0",
+    "eslint": "^2.6.0",
     "jasmine-core": "^2.4.1",
-    "jasmine-node": "^1.14.5",
-    "karma": "^0.13.21",
-    "karma-browserify": "^5.0.2",
-    "karma-chrome-launcher": "^0.2.2",
+    "jasmine-es6": "^0.1.8",
+    "karma": "^0.13.22",
+    "karma-browserify": "^5.0.3",
+    "karma-chrome-launcher": "^0.2.3",
     "karma-cli": "^0.1.2",
-    "karma-jasmine": "^0.3.7",
+    "karma-jasmine": "^0.3.8",
     "uglify-js": "^2.6.2",
     "watchify": "^3.7.0"
   },
   "dependencies": {
-    "babel-core": "^6.5.2",
+    "dist-es6": "^0.1.13",
     "yargs": "^4.2.0"
   }
 }
