--- a/.eslintrc
+++ b/.eslintrc
@@ -1,9 +1,19 @@
 {
   "env": {
     "browser": true,
-    "node": true
+    "node": true,
+    "es6": true
   },
-  "parser": "babel-eslint",
+  "ecmaFeatures": {
+    "sourceType": "module"
+  },
+  "parserOptions": {
+    "sourceType": "module",
+    "ecmaFeatures": {
+      "jsx": true,
+      "experimentalObjectRestSpread": true
+    }
+  },
   "rules": {
     "strict": 0,
     "quotes": [2, "single"],
