--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "ISO/IEC 14496-12"
   ],
   "devDependencies": {
+    "babel-plugin-transform-kontainer-js": "0.0.3",
     "babel-preset-es2015": "^6.6.0",
     "babelify": "^7.2.0",
     "browserify": "^13.0.0",
