--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
   "devDependencies": {
     "babel-plugin-transform-kontainer-js": "0.1.0",
     "babel-preset-es2015": "^6.6.0",
+    "babel-register": "^6.9.0",
     "babelify": "^7.3.0",
     "browserify": "^13.0.0",
     "eslint": "^2.9.0",
