--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,8 @@ language: node_js
 node_js:
   - "4.4"
 
-script: npm install -g npm
+before_script:
+  - npm install -g npm
 
 before_install:
 - export CHROME_BIN=chromium-browser
