--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,15 @@
 language: node_js
 node_js:
-  - "4.4"
+  - "node"
 sudo: true
+env:
+  - CXX=g++-4.8
+addons:
+  apt:
+    sources:
+      - ubuntu-toolchain-r-test
+    packages:
+      - g++-4.8
 before_install:
 - export CHROME_BIN=chromium-browser
 - export DISPLAY=:99.0
