--- a/.travis.yml
+++ b/.travis.yml
@@ -1,21 +1,16 @@
 language: node_js
 node_js:
   - "node"
-sudo: true
-env:
-  - CXX=g++-4.8
+sudo: required
+dist: trusty
 addons:
   apt:
     sources:
-      - ubuntu-toolchain-r-test
+    - google-chrome
     packages:
-      - g++-4.8
+    - google-chrome-stable
 before_install:
 - export CHROME_BIN=chromium-browser
 - export DISPLAY=:99.0
 - sh -e /etc/init.d/xvfb start
-- sudo apt-get update
-- sudo apt-get install -y libappindicator1 fonts-liberation
-- wget https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb
-- sudo dpkg -i google-chrome*.deb
 - npm install -g npm
